8351645: C2: Assertion failures in Expand/CompressBits idealizations with TOP

Co-authored-by: Emanuel Peter <epeter@openjdk.org>
Reviewed-by: epeter, sviswanathan